# astra-mobile

./: .env.example  .gitignore  PRIVACY.md  README.md  app.config.js  app.json  index.js  package-lock.json  package.json
.github/workflows/: android-candidate.yml
modules/astra-audio-route/: expo-module.config.json  index.ts
modules/astra-car/: expo-module.config.json  index.ts
modules/astra-desktop-discovery/: expo-module.config.json  index.ts
modules/astra-desktop-remote-session/: expo-module.config.json  index.ts
modules/astra-desktop-transport/: expo-module.config.json  index.ts
modules/astra-haptics/: expo-module.config.json  index.ts  types.ts
modules/astra-library-scanner/: expo-module.config.json  index.ts
modules/astra-scope/: expo-module.config.json  index.ts
modules/astra-scope/android/: CMakeLists.txt  build.gradle
modules/astra-scope/android/src/main/java/expo/modules/astrascope/: AstraScopeModule.kt  EqBridge.kt  GainBridge.kt  ScopeBridge.kt
modules/astra-scope/android/src/test/java/expo/modules/astrascope/: GainBridgeTest.kt
modules/astra-system-colors/: expo-module.config.json  index.ts
modules/astra-widget/: expo-module.config.json  index.ts
patches/: @shopify+react-native-skia+2.6.2.patch  react-native-track-player+4.1.2.patch
plugins/: withAstraAndroidRelease.js  withAstraAndroidRelease.test.mjs
scripts/: android-memory-profile.mjs  android-memory-profile.test.mjs  run-release-tests.mjs
scripts/release/: android-release.mjs  android-release.test.mjs
src/app/: +native-intent.ts  _layout.tsx  desktop-remote.tsx  (+4 more)
(+373 files in other folders)
